--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,8 @@
-body {
+body, html {
+  height: 100vh;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  overflow: hidden;
+  background-color: #f4f6f8;
+  font-family: PingFang SC, Hiragino Sans GB, 'Segoe UI', SegoeUI, 'Microsoft YaHei', '微软雅黑', Helvetica Neue, Helvetica, Arial, sans-serif;
 }
