--- a/src/page/settings/index.less
+++ b/src/page/settings/index.less
@@ -2,13 +2,15 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  padding-top: 128px;
+  padding-top: 48px;
   height: 100vh;
   background-color: #fff;
   .menu-content {
-    padding-bottom: 24px;
+    margin-bottom: 24px;
     width: 92%;
     min-height: 200px;
+    max-height: 500px;
+    overflow-y: auto;
     .menu-item {
       display: inline-flex;
       align-items: center;
